# gpt-travel-bot

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2813b1b02e1e_init.py
src/: crud.py  database.py  main.py  models.py  settings.py
src/chat_bot/: bot.py  handlers.py  keyboards.py
src/services/: assistans.py
