[tool.poetry]
name = "gpt-tg-bot"
version = "0.1.0"
description = ""
authors = ["Anton Semenov <s.anton@live.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
